7184772: G1: Incorrect assert in HeapRegionLinkedList::add_as_head()

Assertion incorrectly checks that _head is NULL and should be checking that _tail is NULL instead.

Reviewed-by: johnc